--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,8 +8,12 @@ html {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
   width: 100%;
   max-width: vars.$container-width;
+  margin-inline: auto;
 }
 
 .visually-hidden {
