--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -14,6 +14,7 @@ html {
   width: 100%;
   max-width: vars.$container-width;
   margin-inline: auto;
+  padding-inline: $space-main;
 }
 
 .visually-hidden {
